--- a/CloudConnect.html
+++ b/CloudConnect.html
@@ -6,21 +6,22 @@
 
         <script>
 
-            function GetURLParameter(sParam) {
+            // function GetURLParameter(sParam) {
 
-                var sPageURL = window.location.search.substring(1);
-                var sURLVariables = sPageURL.split('&');
-                for (var i = 0; i < sURLVariables.length; i++) {
+            //     var sPageURL = window.location.search.substring(1);
+            //     var sURLVariables = sPageURL.split('&');
+            //     for (var i = 0; i < sURLVariables.length; i++) {
 
-                    var sParameterName = sURLVariables[i].split('=');
-                    if (sParameterName[0] == sParam) {
-                        return sParameterName[1];
-                    }
-                }
-            }
+            //         var sParameterName = sURLVariables[i].split('=');
+            //         if (sParameterName[0] == sParam) {
+            //             return sParameterName[1];
+            //         }
+            //     }
+            // }
 
-            var code = getURLParameter('code');
-            window.location.href = "lampful://?code=" + code;
+            // var code = getURLParameter('code');
+            // window.location.href = "lampful://?code=" + code;
+            window.location.href = "lampful://?code=" + window.location.href.search.substring(1);
         
         </script>
 
