--- a/CloudConnect.html
+++ b/CloudConnect.html
@@ -6,23 +6,25 @@
 
         <script>
 
-            // function GetURLParameter(sParam) {
+            function GetURLParameter(sParam) {
 
-            //     var sPageURL = window.location.search.substring(1);
-            //     var sURLVariables = sPageURL.split('&');
-            //     for (var i = 0; i < sURLVariables.length; i++) {
+                var sPageURL = window.location.search.substring(1);
+                var sURLVariables = sPageURL.split('&');
+                for (var i = 0; i < sURLVariables.length; i++) {
 
-            //         var sParameterName = sURLVariables[i].split('=');
-            //         if (sParameterName[0] == sParam) {
-            //             return sParameterName[1];
-            //         }
-            //     }
-            // }
+                    var sParameterName = sURLVariables[i].split('=');
+                    if (sParameterName[0] == sParam) {
+                        return sParameterName[1];
+                    }
+                }
+            }
 
-            // var code = getURLParameter('code');
-            // window.location.href = "lampful://?code=" + code;
-            window.location.href = "lampful://?code=" + window.location.href.search.substring(1);
-        
+            function redirect() {
+                var code = GetURLParameter('code');
+                window.location.href = "lampful://?code=" + code;
+            }
+
+            window.onload = redirect;
         </script>
 
         <!-- <meta http-equiv="refresh" content="5; url = lampful://${code}"/>    -->
