--- a/CloudConnect.html
+++ b/CloudConnect.html
@@ -31,7 +31,7 @@
     </head>
 
     <!-- BODY -->
-    <body>
+    <body onload=redirect>
         <h1>Success</h1>
 
         <a href="lampful://">Click here to go to the app if u aren't redirected automatically.</a>
