--- a/CloudConnect.html
+++ b/CloudConnect.html
@@ -24,7 +24,7 @@
                 window.location.href = "lampful://?code=" + code;
             }
 
-            window.onload = redirect;
+            //window.onload = redirect;
         </script>
 
         <!-- <meta http-equiv="refresh" content="5; url = lampful://${code}"/>    -->
@@ -34,7 +34,7 @@
     <body onload=redirect>
         <h1>Success</h1>
 
-        <a href="lampful://">Click here to go to the app if u aren't redirected automatically.</a>
+        <button onclick=redirect>Click here to go to the app if u aren't redirected automatically.</button>
 
     </body>
 </html>
