--- a/CloudConnect.html
+++ b/CloudConnect.html
@@ -31,10 +31,10 @@
     </head>
 
     <!-- BODY -->
-    <body onload=redirect>
+    <body onload="redirect()">
         <h1>Success</h1>
 
-        <button onclick=redirect>Click here to go to the app if u aren't redirected automatically.</button>
+        <button onclick="redirect()">Click here to go to the app if u aren't redirected automatically.</button>
 
     </body>
 </html>
